--- a/examples/popsong/s5/conf/asr/transformer_mma_hie_subsample8_ma4H_ca4H_w16_from4L.yaml
+++ b/examples/popsong/s5/conf/asr/transformer_mma_hie_subsample8_ma4H_ca4H_w16_from4L.yaml
@@ -37,9 +37,10 @@ ctc_fc_list: "512"
 ### optimization
 batch_size: 32
 optimizer: noam
-n_epochs: 30
+n_epochs: 2
 convert_to_sgd_epoch: 100
-print_step: 1200
+print_step: 10    # 每隔多少个step打印一次重要讯息
+print_epoch: 1      # 每隔多少个epoch打印一次重要讯息
 metric: accuracy
 lr_factor: 5.0
 early_stop_patient_n_epochs: 5
