添加部分inference-decode的注释 丰富PopSong工程的readme

--- a/examples/popsong/s5/conf/asr/transformer_mma_hie_subsample8_ma4H_ca4H_w16_from4L.yaml
+++ b/examples/popsong/s5/conf/asr/transformer_mma_hie_subsample8_ma4H_ca4H_w16_from4L.yaml
@@ -56,7 +56,7 @@ dropout_enc: 0.1
 dropout_dec: 0.1
 dropout_emb: 0.1
 dropout_att: 0.0
-dropout_head: 0.5  ###
+dropout_head: 0.5
 weight_decay: 1e-6
 lsm_prob: 0.1
 ### MTL
